avoid scrolling on small screens

--- a/style/common.css
+++ b/style/common.css
@@ -1,13 +1,13 @@
 :root {
   --cl-text: #17254a;
   --cl-accent: #cfe6ed;
+  font-size: 18px;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 body {
   margin: 0;
   padding-top: 2rem;
-  font-size: 18px;
-  font-family: 'Source Sans Pro', sans-serif;
   height: 100vh;
   box-sizing: border-box;
   color: var(--cl-text);
@@ -16,7 +16,6 @@ body {
 
 .content {
   max-width: 50rem;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
