--- a/style/home.css
+++ b/style/home.css
@@ -28,6 +28,10 @@ main a {
   color: inherit;
 }
 
+.content {
+  min-height: 100%;
+}
+
 .cta {
   display: block;
   margin-top: 3rem;
@@ -132,5 +136,38 @@ main a {
   .img-main {
     position: fixed;
     margin-right: calc(100vw - 1240px);
+  }
+}
+
+@media (orientation: landscape) and (max-height: 900px) {
+  h1 {
+    font-size: 11vh;
+    font-size: max(11vh, 3rem);
+  }
+
+  h2 {
+    font-size: 3vh;
+    font-size: max(3vh, 1.2rem);
+  }
+
+  p {
+    font-size: 2vh;
+    font-size: max(2vh, 0.8rem);
+  }
+
+  body {
+    padding-top: 4vh;
+  }
+
+  .content {
+    padding-top: 0;
+  }
+
+  .cta {
+    margin-top: 2rem;
+    width: 11.5rem;
+    width: 23vh;
+    height: 7vh;
+    line-height: 7vh;
   }
 }
